@@ -132,7 +132,7 @@ UI_EN = {
     UI_trait_fearful = "Fearful",
     UI_trait_fearfuldesc = "You're easily scared and likely to scream aloud if panicked.",
     UI_trait_gymgoer = "Gym-Goer",
-    UI_trait_gymgoerdesc = "You enjoy working out.<br>Exercise is twice as effective for you.<br>+1 Fitness<br>+1 Strength",
+    UI_trait_gymgoerdesc = "You enjoy working out.<br>Exercise is twice as effective for you and you do not experience exercise fatigue.<br>+1 Fitness<br>+1 Strength",
     UI_cannibal_early = "Butchered human flesh.<br>You aren't seriously considering eating this, are you?",
     UI_cannibal_familiar = "Butchered human flesh.",
     UI_cannibal_comfortable = "Butchered human flesh.<br>So scrumptious!",
